# RustStreamDeck

./: .gitignore  Cargo.toml  build.bat  build.sh  readme.md
.github/workflows/: build_MacOS.yml  build_linux.yml  build_win.yml
crates/AppState/: Cargo.toml
crates/AppState/src/: lib.rs
crates/Config/: Cargo.toml
crates/Config/src/: defaultconfig.json  lib.rs
crates/FileHelpers/: Cargo.toml
crates/StreamDeckReplacement/: Cargo.toml
crates/StreamDeckReplacement/src/: main.rs
crates/Webserver/html_src/: index.js  style.css
crates/Webserver/src/: lib.rs
crates/appstate/: Cargo.toml
crates/appstate/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/database/src/sql_queries/: add_credentials.sql  change_password.sql  change_username.sql  check_password.sql  create_tables.sql  get_salt.sql  get_security_key.sql  is_db_empty.sql  remove_user.sql  user_exists.sql
crates/filehelpers/: Cargo.toml
crates/filehelpers/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/permissions/: Cargo.toml
crates/prettylogs/: Cargo.toml
crates/prettylogs/src/: lib.rs
crates/webserver/: Cargo.toml
crates/webserver/html_src/: index.html  index.js  style.css
crates/webserver/src/: lib.rs
html_src/: index.html
src/: appstate.rs  config.rs  defaultconfig.json  desktop_configuration_portal.rs  files.rs  logging.rs  macros.rs  main.rs  smartphone_display.rs  webserver.rs
src/settings_portal_src/: index.html
src/smartphone_html_src/: index.html  index.js
