[workspace]
resolver = "2"
members = [
    "crates/config",
    "crates/filehelpers",
    "crates/macros",
    "crates/prettylogs",
    "crates/appstate",
    "crates/StreamDeckReplacement",
    "crates/webserver",
    "crates/database"
]

default-members = ["crates/StreamDeckReplacement"]

[workspace.dependencies]
serde = { version = "1.0.183", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.105", features = ["float_roundtrip"] }
tokio = { version = "1.40.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing"] }
futures = "0.3.28"
futures-util = "0.3.28"
regex = "1.10.2"
prost = "0.13.3"
axum = { version = "0.7.7", features = ["tracing", "ws", "macros"] }
axum-extra = { version = "0.9.4", features = ["protobuf"] }
tonic = "0.12.3"
sled = { version = "0.34.7", features = ["compression", "no_logs"] }

# Local crates as dependencies
Config = { path = "crates/config" }
FileHelpers = { path = "crates/filehelpers" }
macros = { path = "crates/macros" }
PrettyLogs = { path = "crates/prettylogs" }
AppState = { path = "crates/appstate" }
Webserver = { path = "crates/webserver" }
database = {path = "crates/database"}
