[package]
name = "StreamDeckReplacement"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "StreamDeckReplacement"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
regex.workspace = true
prost.workspace = true
axum.workspace = true
tonic.workspace = true
sled.workspace = true

Config.workspace = true
FileHelpers.workspace = true
macros.workspace = true
PrettyLogs.workspace = true
AppState.workspace = true
Webserver.workspace = true
database.workspace = true