[package]
name = "StreamDeckReplacement"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "StreamDeckReplacement"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
regex.workspace = true
prost.workspace = true
tonic.workspace = true
config.workspace = true
file_helpers.workspace = true
macros.workspace = true
pretty_logs.workspace = true
app_state.workspace = true
webserver.workspace = true
database.workspace = true
