[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
regex.workspace = true
prost.workspace = true
tonic.workspace = true
sled.workspace = true

Config.workspace = true
AppState.workspace = true
tracing-subscriber = "0.3.18"
