[package]
name = "Webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
regex.workspace = true
prost.workspace = true
tonic.workspace = true
sled.workspace = true
rcgen.workspace = true
local-ip-address.workspace = true
warp.workspace = true

AppState.workspace = true
database.workspace = true
FileHelpers.workspace = true
